// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PageAgentExecutionRuntime > modifyNodes > error handling > should normalize single operation to array 1`] = `
"# Title

Single op

First paragraph. 

Second paragraph. 

"
`;

exports[`PageAgentExecutionRuntime > modifyNodes > insert > should insert multiple nodes after same node 1`] = `
"# Title

Insert 3

Insert 2

Insert 1

First paragraph. 

Second paragraph. 

"
`;

exports[`PageAgentExecutionRuntime > modifyNodes > insert > should insert single node after existing node 1`] = `
"# Title

New inserted paragraph

First paragraph. 

Second paragraph. 

"
`;

exports[`PageAgentExecutionRuntime > modifyNodes > mixed operations > should handle insert, modify, and remove in single call 1`] = `
"# Title

# Updated title

New content

First paragraph. 

Second paragraph. 

"
`;

exports[`PageAgentExecutionRuntime > modifyNodes > modify > should modify existing node content 1`] = `
"# Title

First paragraph. 

Modified content here

Second paragraph. 

"
`;

exports[`PageAgentExecutionRuntime > modifyNodes > modify > should modify multiple nodes at once 1`] = `
"# Title

First paragraph. 

Modified first

Second paragraph. 

Modified second

"
`;

exports[`PageAgentExecutionRuntime > modifyNodes > remove > should remove existing node 1`] = `
"<?xml version="1.0" encoding="UTF-8"?>
<root>
  <h1 id="ll63">
    <span id="lqqe">Title</span>
  </h1>
  <p id="m7fb">
    <span id="mczm">Second paragraph.</span>
  </p>
</root>"
`;

exports[`PageAgentExecutionRuntime > modifyNodes > remove > should remove multiple nodes 1`] = `
"# Title

First paragraph. 

Second paragraph. 

"
`;

exports[`PageAgentExecutionRuntime > replaceText > should replace all occurrences by default 1`] = `
"Hi world. This is a test. Hi again. Testing the world. 

"
`;

exports[`PageAgentExecutionRuntime > replaceText > should support regex first occurrence only 1`] = `
"X world. This is a test. Hello again. Testing the world. 

"
`;

exports[`PageAgentExecutionRuntime > replaceText > should support regex patterns with optional groups 1`] = `
"Hello world. This is a demo. Hello again. Testing the world. 

"
`;

exports[`PageAgentExecutionRuntime > replaceText > should support regex with alternation 1`] = `
"X X. This is a test. X again. Testing the X. 

"
`;

exports[`PageAgentExecutionRuntime > replaceText > should support regex with character classes 1`] = `
"Guest and Guest are online. 

"
`;

exports[`PageAgentExecutionRuntime > replaceText > should support regex with quantifiers 1`] = `
"Hi world! Hi again! 

"
`;

exports[`PageAgentExecutionRuntime > replaceText > should support regex with word boundaries 1`] = `
"Hello universe. This is a test. Hello again. Testing the universe. 

"
`;
